tests/NormalTests/paczka1/fuzzy1/12764903.err
Error in line 26: S8Sw S112 99,2
Error in line 34: KqrCGwjQqoM S217 -4,6
Error in line 29: KqrCGwjQqoM S217 86,0
